# 3D-game-engine

./: .gitignore  .gitmodules  README.md  build.sh  install_deps.sh
engine/: CMakeLists.txt
engine/shaders/: basic.frag  basic.vert
engine/src/: main.cpp
engine/src/camera/: Camera.cpp  Camera.h
engine/src/core/: Engine.cpp  Engine.h
engine/src/renderer/: Renderer.cpp  Renderer.h
engine/src/shaders/: Shader.cpp  Shader.h
